# apkdemo

./: .gitignore  build.bat  gradle.properties  intro.md  sdk.md  settings.gradle.kts
.opencode/skills/: GoldieOS开发手册.md  goldieos-app-dev-cn.md  goldieos-app-dev.md
GoldieSettingsAndroid/: build.gradle.kts
GoldieSettingsAndroid/app/src/main/assets/convai/img/: .placeholder
GoldieSettingsAndroid/app/src/main/java/com/anomaly/goldiesettings/convai/: ConvaiBridge.java  ConvaiClient.java  ConvaiEvent.java  ConvaiStatus.java
GoldieSettingsAndroid/app/src/main/java/com/anomaly/goldiesettings/model/: Settings.java  VoicePresets.java
GoldieSettingsAndroid/app/src/main/java/com/anomaly/goldiesettings/ui/: AiConfigListActivity.java  MainActivity.java  ServerConfigActivity.java  SleSettingsActivity.java  TalkActivity.java  WifiSettingsActivity.java
GoldieSettingsAndroid/app/src/main/java/com/anomaly/goldiesettings/util/: L.java
GoldieSettingsAndroid/app/src/main/res/drawable/: avatar_female.xml  avatar_male.xml  bg_entry_icon.xml  bg_server_btn.xml  ic_apikey.xml  ic_avatar.xml  ic_launcher_foreground.xml  ic_sle.xml  ic_voice.xml  ic_volume.xml  ic_wifi.xml
GoldieSettingsAndroid/app/src/main/res/layout/: activity_ai_config_list.xml  activity_ai_settings.xml  activity_main.xml  activity_server_config.xml
GoldieSettingsAndroid/app/src/main/res/values/: colors.xml  strings.xml
GoldieSettingsAndroid/tools/: extract_assets.bat  png_resize.js  probe.cs  probe.ps1  verify_g711.py
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/anomaly/goldiesettings/: App.java
app/src/main/java/com/anomaly/goldiesettings/convai/: ConvaiClient.java  ConvaiEmotion.java  ConvaiEngine.java  ServerMessage.java
app/src/main/java/com/anomaly/goldiesettings/convai/audio/: AudioPlayer.java
app/src/main/java/com/anomaly/goldiesettings/convai/codec/: G711A.java
app/src/main/java/com/anomaly/goldiesettings/convai/proto/: Envelope.java  MsgType.java
app/src/main/java/com/anomaly/goldiesettings/model/: Settings.java
app/src/main/java/com/anomaly/goldiesettings/ui/: AiSettingsActivity.java  TalkActivity.java  VolumeActivity.java
app/src/main/res/drawable/: bg_entry_card.xml  ic_ai.xml  ic_cloud.xml  ic_launcher_background.xml  ic_personality.xml  ic_relationship.xml  ic_server.xml
app/src/main/res/layout/: activity_server_config.xml  activity_sle.xml  activity_talk.xml  activity_volume.xml  activity_wifi.xml  dialog_wifi_password.xml
app/src/main/res/values/: strings.xml  themes.xml
cloud_gateway/: .gitignore  CMakeLists.txt  README.md  README_zh.md  STATUS.md
cloud_gateway/docs/cloud_gateway/: api_reference.md  architecture.md  deployment.md  index.md  protocol.md
cloud_gateway/include/cloud_gateway/: config.hpp  log.hpp  protocol.hpp  session.hpp
cloud_gateway/src/: config.cpp  main.cpp  protocol.cpp
cloud_gateway/src/codec/: envelope.cpp  envelope.hpp
cloud_gateway/src/server/: thread_pool.cpp  thread_pool.hpp
cloud_gateway/src/session/: session.cpp  session.hpp  session_manager.cpp  session_manager.hpp
cloud_gateway/src/upstream/: asr_backend.cpp  asr_backend.hpp  llm_backend.cpp  llm_backend.hpp  tts_backend.cpp  tts_backend.hpp
cloud_gateway/src/util/: base64.cpp  base64.hpp  event_loop.cpp  event_loop.hpp  json_helper.cpp  json_helper.hpp  sha1.cpp  sha1.hpp
cloud_gateway/src/ws/: frame.cpp  frame.hpp  handshake.cpp  handshake.hpp  server.cpp  server.hpp
cloud_gateway/test/: test_client.cpp  test_main.cpp
docs/: DEV_PLAN.md
docs/cloud_gateway/: README.md  architecture_presentation.md  cloud_business_design.md  microservices_architecture.md  settings_app_logic.md
docs/cloud_gateway/ai_talk/: ai_talk_design.md
docs/cloud_gateway/gateway/: gateway_design.md
docs/cloud_gateway/media_service/: media_service_design.md
include/convai/: convai_api.h  convai_event.h  convai_platform.h  convai_types.h
tools/: img2png.js  img2png.py  resize.ps1
(+6 files in other folders)
